debhelper (10.2.2) UNRELEASED; urgency=medium

  * Fix typo in changelog entry for release 10.2.  Thanks to
    Peter Pentchev for reporting it.
  * Deprecate all compat levels lower than 9.
  * dh: Discard override log files before running rather than
    after.
  * dh_compress,dh_fixperms: Remove references to long
    obsolete directories such as usr/info, usr/man and
    usr/X11*/man.

 -- Niels Thykier <niels@thykier.net>  Sun, 02 Oct 2016 09:52:08 +0000

debhelper (10.2.1) unstable; urgency=medium

  * d/rules: Add a ./run in front of dh_auto_install.  It is
    technically not needed, but it prevents lintian from assuming
    that we need to Build-Depend debhelper.

 -- Niels Thykier <niels@thykier.net>  Sun, 02 Oct 2016 06:51:49 +0000

debhelper (10.2) unstable; urgency=medium

  * Apply patch from Peter Pentchev to fix some typos.
  * Apply patch from Michael Biebl to undo a major
    regression where all of debhelpers functionality was
    missing (introduced in 10.1).  (Closes: #839557)
  * dh_installinit,dh_systemd_start: Introduce a new
    --no-stop-on-upgrade as an alternative to
    --no-restart-on-upgrade.  This new option should
    reduce the confusion of what it does.  Thanks to
    Michael Biebl for the suggestion.

 -- Niels Thykier <niels@thykier.net>  Sun, 02 Oct 2016 06:20:56 +0000

debhelper (10.1) unstable; urgency=medium

  * Apply patch from Michael Biebl to take over dh-systemd
    package to ease backporting to jessie-backports.
    (Closes: #837585)
  * Apply patch from Helmut Grohne and Julian Andres Klode
    to improve cross-building support in the cmake build
    system.  (Closes: #833789)
  * Make the makefile.pm buildsystem (but not subclasses thereof)
    pass the CC and CXX variables set to the host compilers when
    cross-building.  Thanks to Helmut Grohne for the idea and
    the initial patch.  (Closes: #836988)
  * dh_md5sums.1: Mention dpkg --verify as a consumer of the